<resources>
    <string name="app_name">HealthTips</string>
    <string name="health">Health</string>
    <string name="tips">Tips\n</string>
    <string name="make_your_l">Make Your Life Better Then Before!!</string>
    <string name="create_new_">Create new Account</string>
    <string name="let_s_get_s">Let\'s get started !</string>
    <string name="name">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="have_account">Already Have Account?</string>
    <string name="login">Login</string>
    <string name="login2">Login your account !!</string>
    <string name="dont_have">Don\'t Have an Account?</string>
    <string name="hi_user">Hi,</string>
    <string name="text1">Here Some Tips and Information.</string>
    <string name="text2">Based On Data You Provide.</string>
    <string name="artikel">Article</string>
    <string name="vidio">Video</string>
    <string name="apps">Apps</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur</string>
    <string name="berat">Berat Badan (kg)</string>
    <string name="tinggi">Tinggi Badan (m)</string>
    <string name="fisik">Tingkat Aktivitas Fisik</string>
    <string name="jumlah">Jumlah Jam Tidur (jam)</string>
    <string name="riwayat">Riwayat Kesehatan</string>
    <string name="username">Username</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="edit">Edit Your Data</string>
    <string name="logout">Logout</string>
    <string name="edit_your_data">You Can Edit Your Data Now</string>
    <string name="save">Save</string>
    <string name="informasi">Kami menemukan berbagai artikel, dan memilahnya sesuai dengan data yang anda berikan.</string>
    <string name="bermanfaat">Semoga Bermanfaat!</string>
    <string name="berdasarkan_imt">Berdasarkan IMT </string>
    <string name="source">Source</string>
    <string name="jumlah_tidur">Berdasarkan Jumlah Jam Tidur</string>
    <string name="tingkat_aktivitas">Berdasarkan Tingkat Aktivitas</string>
</resources>