<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="312dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_new_"
        android:layout_width="284dp"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-12sp"
        android:text="@string/create_new_"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/let_s_get_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/let_s_get_s"
        android:layout_width="258dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="89dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/let_s_get_s"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_new_" />

    <TextView
        android:id="@+id/name"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/let_s_get_s" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/edittext_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:paddingStart="10dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/email"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/emailEditText1"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/edittext_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:paddingStart="10dp"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="292dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText1" />

    <EditText
        android:id="@+id/passwordEditText1"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/edittext_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:paddingStart="10dp"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#ECDAC5"
        android:fontFamily="@font/poppins_bold"
        android:onClick="navigateToNextLayout"
        android:text="Sign Up"
        android:textColor="#2D384B"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="113dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/have_account"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="169dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="left"
        android:onClick="navigateToNextLayout"
        android:text="Login!"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>