<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1e1e">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="312dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="152dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-35sp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login2"
        android:layout_width="258dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/login2"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/email"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2" />

    <EditText
        android:id="@+id/emailEditText2"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edittext_shape"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="286dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText2" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edittext_shape"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="42dp"
        android:backgroundTint="#ECDAC5"
        android:fontFamily="@font/poppins_bold"
        android:onClick="navigateToNextLayout"
        android:text="Login"
        android:textColor="#2D384B"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText2" />

    <TextView
        android:id="@+id/dont_have"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/dont_have"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="154dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="left"
        android:onClick="navigateToNextLayout"
        android:text="Sign Up"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dont_have" />

</androidx.constraintlayout.widget.ConstraintLayout>